# electric-ivm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  vitest.config.ts  vitest.global-setup.ts
.beads/: config.yaml  interactions.jsonl  metadata.json
.claude/skills/run-linearlite/: SKILL.md
.github/workflows/: ci.yml  docker.yml
apps/api/: README.md  package.json
apps/api/src/: core.ts  index.ts  router.ts  server.ts
apps/engine/: Cargo.toml  README.md
apps/engine/src/: arrangements.rs  circuit.rs  config.rs  ds.rs  electric.rs  engine.rs  family.rs  fault.rs  heap_size.rs  http.rs  lib.rs  main.rs  mem.rs  metrics.rs  params.rs  pg.rs  pgoutput.rs  pk_dict.rs  predicate.rs  replication.rs  retention.rs  schema.rs  sql.rs  statsd.rs  subq_circuit.rs  subq_feed.rs  subq_feed_repr_spike.rs  subq_index.rs  subquery.rs  trace.rs  value.rs  where_sql.rs
apps/engine/src/engine/: catalog.rs  circuit_serving.rs  emission.rs  executors.rs  introspection.rs  lifecycle.rs  membership.rs  mod.rs  output.rs  planning.rs  sequencer.rs  tests.rs
apps/engine/tests/: http_endpoints.rs  live_poll_deadline.rs  params_shape.rs  statsd_conformance.rs  storage_metrics.rs  sysinfo_cpu.rs
apps/pipeline-viz/: README.md  index.html  package.json  vite.config.ts
apps/pipeline-viz/src/: App.tsx  DetailPanel.tsx  WhereEditor.tsx  build-circuit.test.ts  build-circuit.ts  build-dbsp.ts  build-graph.test.ts  build-graph.ts  delta-store.ts  edges.tsx  main.tsx  node-meta.ts  nodes.tsx  predicate-label.ts  shape-change-store.ts  shape-sql.ts  state-store.ts  styles.css  trace-anim.test.ts  trace-anim.ts  types.ts  useAggValues.ts  useShapeContents.ts  useShapeLog.ts  useTrace.ts
apps/playground/: README.md  index.html  package.json  start.ts  tsconfig.json  vite.config.ts
apps/playground/server/: actions.ts  db.ts  engine-client.ts  main.ts  scenes.ts  schema.ts  shapes.ts  trace.ts  workspace.ts
apps/playground/shared/: scenes.ts  types.ts
apps/playground/src/: App.tsx  DataPanel.tsx  DetailPanel.tsx  DeviceCards.tsx  PipelineCanvas.tsx  SceneStrip.tsx  ShapeBuilder.tsx  ShapeCards.tsx  SubsetBoard.tsx  Welcome.tsx  WorldPanel.tsx  api.ts  edges.tsx  main.tsx  nodes.tsx  scrub.ts  styles.css  trace-anim.ts  useShapeRows.ts  useTrace.ts  useWorkspace.ts
docker/: Dockerfile.ds  Dockerfile.electric  Dockerfile.engine  Dockerfile.node  Dockerfile.viz  README.md  api-server.ts  compose.electric.yaml  compose.playground.yaml  compose.yaml  ds-server.ts  electric-entrypoint.sh  package.json  viz.Caddyfile
docs/: ARCHITECTURE.md  building-app-pipelines.md  deployment-postgres.md  fleet-conformance.md  getting-started.md  how-queries-become-live.md  ivm-engine-internals.md  linearlite-circuit-design.md  live-queries-guide.md  memory-model.md  shapes-and-subqueries-guide.md
docs/bench/: electric-fleet-results.md  feed-relations-memory.md  mem-attribution-100k.md  mem-reduction-log.md  memory-matrix-blogpost.csv  memory-matrix-blogpost.md  shape-memory-matrix.md  shape-memory-scale.md
docs/bench/raw/: attribution-inmemory-footprint.txt  attribution-inmemory-memory.json  attribution-inmemory-vmmap-summary.txt  attribution-spill-footprint.txt  attribution-spill-memory.json  attribution-spill-vmmap-summary.txt  scale-attribution-inmemory.md  scale-attribution-spill.md  scale-fixed-db-inmemory.md  scale-fixed-db-spill.md  scale-spill-aggressive.md  scale-traceoff.md  scale-traceon.md
docs/notes/: 2026-07-16-electric-circuits-messaging-hierarchy.md  2026-07-16-electric-circuits-story-dynamic-first.md  2026-07-16-feed-set-representation-spike.md  rows-live-in-postgres.md
docs/superpowers/plans/: 2026-06-29-subqueries.md  2026-07-02-dbsp-playground.md  2026-07-08-tutorial-01-first-shape.md  2026-07-14-feed-relations.md  2026-07-14-subquery-circuit-templates.md  2026-07-15-shape-memory-reduction.md  2026-07-16-electric-circuits-restructuring.md
docs/superpowers/research/: dbsp-rust-api.md  durable-streams-protocol.md  durable-streams-ts-client.md  faker-sim.md  pglite-oracle.md  tanstack-db.md  trpc-v11.md
docs/superpowers/specs/: 2026-06-27-conformance-expansion-plan.md  2026-06-27-electric-lite-decisions.md  2026-06-27-electric-lite-design.md  2026-06-27-shape-pipeline-sharing-design.md  2026-06-28-benchmark-findings.md  2026-06-29-postgres-logical-replication.md  2026-06-29-reduce-engine-memory-design.md  2026-06-29-subqueries-design.md  2026-06-29-subset-queries-design.md  2026-06-30-electric-protocol-conformance.md  2026-06-30-linearlite-project-visibility.md  2026-07-01-subset-lsn-positioning-design.md  2026-07-02-consistency-hardening-design.md  2026-07-02-dbsp-playground-design.md  2026-07-06-pipeline-viz-reactive-rebuild-design.md  2026-07-08-tutorial-01-first-shape-design.md  2026-07-08-tutorial-03-expressive-shapes-design.md  2026-07-14-feed-relations-design.md  2026-07-14-subquery-circuit-templates-design.md  2026-07-16-electric-circuits-repo-restructuring-design.md
electric-conformance/: README.md  el_ivm_setup.ex  el_lite_setup.ex  electric_circuits_oracle_property_test.exs  electric_circuits_oracle_test.exs  electric_ivm_oracle_property_test.exs  electric_ivm_oracle_test.exs  electric_lite_oracle_property_test.exs  electric_lite_oracle_test.exs  run.sh  subquery_dependency_update_test.exs  subquery_move_out_test.exs
examples/: package.json  todos-demo.ts
examples/linearlite/: README.md  index.html  package.json  start.ts  tsconfig.json  vite.config.ts
examples/linearlite/src/: App.tsx  electric.ts  schema.ts  styles.css
examples/web/: README.md  index.html  package.json  start.ts  vite.config.ts
examples/web/src/: App.tsx  electric.ts  schema.ts  shapes.ts  styles.css
scripts/: conformance-loop.sh  linearlite.sh
tutorials/: README.md  compose.yaml
tutorials/episodes/01-first-live-query/: README.md
tutorials/episodes/01-first-shape/: README.md
tutorials/seed/: 01-init.sql
(+22 files in other folders)
