[package]
name = "electric-ivm-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "electric_ivm_engine"
path = "src/lib.rs"

[[bin]]
name = "electric-ivm-engine"
path = "src/main.rs"

[dependencies]
# `OrderedFloat` gives `Value::Float` the `Eq`/`Ord`/`Hash` a bare f64 lacks (map keys:
# aggregate multisets, routing indexes).
ordered-float = "3"
anyhow = "1"

# Service layer: control-plane HTTP + durable-streams client + async runtime.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# BroadcastStream adapter for the /trace SSE endpoint.
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
# http to a localhost durable-streams server only -> no TLS backend needed.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Postgres source: logical-replication slot polling (test_decoding) + backfill queries.
# with-serde_json-1 lets us read `to_jsonb(row)` straight into serde_json::Value.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memory-stats = "1"
# System-metrics sampler for the StatsD periodic-metrics table (CPU/mem/load/process, conformance §4a).
sysinfo = "0.33"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
pgwire-replication = { version = "0.3.2", default-features = false, features = ["scram"] }
url = "2"

[dev-dependencies]
# Drive the axum router in-process (Service::oneshot) for the /v1/health + endpoint tests.
tower = { version = "0.5", features = ["util"] }
# start_paused tests for the live long-poll deadline (deterministic virtual time).
tokio = { version = "1", features = ["full", "test-util"] }
