[package]
name = "electric-circuits-engine"
description = "The Electric Circuits engine: ingests Postgres logical replication and keeps live queries (joins, aggregates, subqueries) incrementally in sync via dbsp circuits, serving the Electric wire protocol."
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "electric_circuits_engine"
path = "src/lib.rs"

[[bin]]
name = "electric-circuits-engine"
path = "src/main.rs"

[dependencies]
# Query engine, reintroduced as the storage-backed table-state layer (src/arrangements.rs):
# one shared circuit whose arrangements spill to disk when tables grow. Version reqs kept at
# minor-level so cargo unifies our direct deps with dbsp's own tree (so the rkyv/size-of/
# feldera-macros derive macros match dbsp's expected rkyv 0.7).
dbsp = "0.318"
# default-features=false avoids rkyv's default `size_32`, which is mutually exclusive with
# the `size_64` that dbsp selects (cargo unions features across dependents).
rkyv = { version = "0.7", default-features = false, features = ["std", "size_64", "validation"] }
# dbsp uses Feldera's fork of size-of. The `SizeOf` derive emits hardcoded `size_of::` paths,
# so the crate must be in scope under the name `size_of` (dbsp renames it the same way).
# `ordered-float` feature pulls the SizeOf impl for OrderedFloat (used by our Float cell).
size_of = { package = "feldera-size-of", version = "0.1.7", features = ["ordered-float"] }
feldera-macros = "0.318"
# `OrderedFloat` gives `Value::Float` the `Eq`/`Ord`/`Hash` a bare f64 lacks (map keys:
# aggregate multisets, routing indexes). Pinned to 3.x to match feldera-size-of's SizeOf
# impl; rkyv_64 matches rkyv's size_64; rkyv_ck adds the validation/CheckBytes impl.
ordered-float = { version = "3", features = ["rkyv_64", "rkyv_ck"] }
anyhow = "1"

# Service layer: control-plane HTTP + durable-streams client + async runtime.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# BroadcastStream adapter for the /trace SSE endpoint.
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
# http to a localhost durable-streams server only -> no TLS backend needed.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Postgres source: logical-replication slot polling (test_decoding) + backfill queries.
# with-serde_json-1 lets us read `to_jsonb(row)` straight into serde_json::Value.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memory-stats = "1"
# System-metrics sampler for the StatsD periodic-metrics table (CPU/mem/load/process, conformance §4a).
sysinfo = "0.33"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
pgwire-replication = { version = "0.3.2", default-features = false, features = ["scram"] }
url = "2"
libc = "0.2.186"
# Host-side per-feed key sets (Task 2.2, dbsp-ds-dh6): `FeedSet` holds each shape's feed
# membership as a `HashMap<feed_id, RoaringBitmap>` keyed by `u32` pk-id — the delete gate is a
# synchronous `remove()`-returns-`true` check, no longer an in-circuit relation. Already in the
# tree transitively (dbsp -> roaring 0.11.3). See docs/notes/2026-07-16-feed-set-representation-spike.md.
roaring = "0.11"

[dev-dependencies]
# Drive the axum router in-process (Service::oneshot) for the /v1/health + endpoint tests.
tower = { version = "0.5", features = ["util"] }
# start_paused tests for the live long-poll deadline (deterministic virtual time).
tokio = { version = "1", features = ["full", "test-util"] }
